[gd_scene load_steps=2 format=3 uid="uid://bivo75jlpqqx8"]

[ext_resource type="Script" path="res://scene/widget/uma_display.gd" id="1_vev3x"]

[node name="UmaDisplay" type="HBoxContainer"]
script = ExtResource("1_vev3x")

[node name="NameContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 5

[node name="Name" type="Label" parent="NameContainer"]
layout_mode = 2
text = "Uma"
vertical_alignment = 1

[node name="ValuesContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 5

[node name="HBoxContainer" type="HBoxContainer" parent="ValuesContainer"]
layout_mode = 2

[node name="First" type="Label" parent="ValuesContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "30"
vertical_alignment = 1

[node name="Second" type="Label" parent="ValuesContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "10"
vertical_alignment = 1

[node name="Third" type="Label" parent="ValuesContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-10"
vertical_alignment = 1

[node name="Fourth" type="Label" parent="ValuesContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-30"
vertical_alignment = 1
